--- a/client/src/assets/css/main/App.scss
+++ b/client/src/assets/css/main/App.scss
@@ -45,18 +45,42 @@
     flex-direction: column;
   
     height: 100vh;
-    // overflow: scroll;
-    // background-color: red;
-    // display: none;
+    overflow: hidden;
 
     // .Body_Content {
 
-      .COMPONENT__Login , .COMPONENT__SignUp{
+      .COMPONENT__Login , .COMPONENT__SignUp, .COMPONENT__AddProduct{
         display: flex;
         justify-content: center;
         align-items: center;
       
         min-height: calc(100vh - var(--header_height) - var(--footer_height));
+      }
+
+      .COMPONENT__AddProduct {
+
+        .inputProduct-form{
+          display: flex;
+          justify-content: center;
+          flex-direction: column;
+  
+          width: 100%;
+          padding: var(--marginX-1);
+  
+          .form-pair {
+            grid-template-columns: 50% 50%;
+          }
+  
+          h1, div, button {
+            display: grid;
+            align-items: center;
+            
+            width: 100%;
+          
+            margin-top: var(--margin-topBottom);
+            margin-bottom: var(--margin-topBottom);
+          }
+        }
       }
       
       .COMPONENT__AllProducts{
@@ -95,10 +119,10 @@
       }
       
       .PAGE__HomePage{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
+        // display: flex;
+        // justify-content: center;
+        // align-items: center;
+        // flex-direction: column;
       
         /* height: 100%; */
         /* overflow-y: scroll; */
@@ -145,23 +169,6 @@
       }
       
       .COMP_Hero{
-      
-      }
-      .inputProduct-form{
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-      
-        padding-left: var(--marginX-1);
-        padding-right: var(--marginX-1);
-      }
-      .form-pair{
-        display: grid;
-        align-items: center;
-        grid-template-columns: 50% 50%;
-      
-        margin-top: var(--margin-topBottom);
-        margin-bottom: var(--margin-topBottom);
       
       }
     // }
