--- a/client/src/assets/css/main/App.css
+++ b/client/src/assets/css/main/App.css
@@ -54,6 +54,30 @@
   min-height: calc(100vh - var(--header_height) - var(--footer_height));
 }
 
+.App .section, .App .COMPONENT__Hero {
+  width: 100%;
+  min-height: calc(100vh - var(--header_height));
+}
+
+.App .COMPONENT__Hero {
+  background-color: var(--text-gray-900);
+  position: relative;
+}
+
+.App .COMPONENT__Footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  /* flex-direction: column; */
+  min-height: var(--footer_height);
+}
+
 .App .COMPONENT__AddProduct .inputProduct-form {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -83,11 +107,6 @@
   width: 100%;
   margin-top: var(--margin-topBottom);
   margin-bottom: var(--margin-topBottom);
-}
-
-.App .section {
-  width: 100%;
-  min-height: calc(100vh - var(--header_height));
 }
 
 .App .SECTION__SinglePage {
@@ -138,20 +157,6 @@
 
 .App .topBottom_section {
   /* min-height: calc(100vh - var(--headerFooter_height)); */
-}
-
-.App .COMPONENT__Footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  /* flex-direction: column; */
-  min-height: var(--footer_height);
 }
 
 .App .signUpHere, .App .loginHere {
