--- a/client/src/assets/css/main/App.css
+++ b/client/src/assets/css/main/App.css
@@ -64,6 +64,16 @@
   position: relative;
 }
 
+.App .COMPONENT__AboutUs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 .App .COMPONENT__ContactUs {
   width: 100%;
   min-height: calc(100vh - var(--header_height) - var(--footer_height));
@@ -135,19 +145,6 @@
 
 .App .PAGE__HomePage {
   /* height: 100%; */
-  /* overflow-y: scroll; */
-}
-
-.App .SECTION__AboutUs {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  /* height: calc(100vh - var(--header_height) - var(--footer_height)); */
-  /* height: 500px; */
   /* overflow-y: scroll; */
 }
 
