--- a/client/src/assets/css/main/App.scss
+++ b/client/src/assets/css/main/App.scss
@@ -65,6 +65,10 @@
         background-color: var(--text-gray-900);
         position: relative;
       }
+      .COMPONENT__AboutUs{
+        display: flex;
+        flex-direction: column;
+      }
       .COMPONENT__ContactUs {
         width: 100%;
         min-height: calc(100vh - var(--header_height) - var(--footer_height));
@@ -143,14 +147,6 @@
         /* overflow-y: scroll; */
       }
       
-      .SECTION__AboutUs{
-        display: flex;
-        flex-direction: column;
-      
-        /* height: calc(100vh - var(--header_height) - var(--footer_height)); */
-        /* height: 500px; */
-        /* overflow-y: scroll; */
-      }
       
       .section{
         /* min-height: 100vh; */
