--- a/client/src/assets/css/main/App.css
+++ b/client/src/assets/css/main/App.css
@@ -54,7 +54,7 @@
   min-height: calc(100vh - var(--header_height) - var(--footer_height));
 }
 
-.App .section, .App .COMPONENT__Hero {
+.App .section, .App .COMPONENT__Hero, .App .COMPONENT__FeaturedProducts {
   width: 100%;
   min-height: calc(100vh - var(--header_height));
 }
